--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>groupId</groupId>
     <artifactId>jewelryStones</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <build>
         <plugins>
             <plugin>
@@ -33,7 +32,16 @@
             <version>2.3.1</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+        </dependency>
+        <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
     </dependencies>
     
 </project>
